--- a/style.scss
+++ b/style.scss
@@ -513,6 +513,7 @@
     &_ttl{
         font-family: $font-family-bold;
         margin-bottom: 24px;
+	    line-height:1.4;
     }
     .btn_wrap{
         column-gap: 5px;
